--- a/views/myReviews.handlebars
+++ b/views/myReviews.handlebars
@@ -51,7 +51,7 @@
                 <div class="singleRev wgBorder">
                     <div class="d-flex align-items-center">
                         <div class="flex-shrink-0">
-                            <img src="/images/male.jpg" class="reviewImg" alt="reviewImg">
+                            <img src="/images/pp.jpg" class="reviewImg" alt="reviewImg">
                         </div>
                         <div class="flex-grow-1 ms-3">
                             <div class="reviewTitleDiv">
@@ -71,7 +71,7 @@
                 <div class="singleRev wgBorder">
                     <div class="d-flex align-items-center">
                         <div class="flex-shrink-0">
-                            <img src="/images/male.jpg" class="reviewImg" alt="reviewImg">
+                            <img src="/images/pp.jpg" class="reviewImg" alt="reviewImg">
                         </div>
                         <div class="flex-grow-1 ms-3">
                             <div class="reviewTitleDiv">
@@ -91,7 +91,7 @@
                 <div class="singleRev wgBorder">
                     <div class="d-flex align-items-center">
                         <div class="flex-shrink-0">
-                            <img src="/images/male.jpg" class="reviewImg" alt="reviewImg">
+                            <img src="/images/pp.jpg" class="reviewImg" alt="reviewImg">
                         </div>
                         <div class="flex-grow-1 ms-3">
                             <div class="reviewTitleDiv">
