--- a/views/myReviews.handlebars
+++ b/views/myReviews.handlebars
@@ -102,7 +102,7 @@
                                     Effects blah blah blah blah blah blah blah blah
                                 </li>
                                 <li>
-                                    From blah blah blah blah blah blah
+                                    From blah blah blah blah blah blah blah!!
                                 </li>
                             </ul>
                         </div>
