--- a/public/css/style.css
+++ b/public/css/style.css
@@ -56,3 +56,18 @@ button {
 #verifyAge form button {
     margin-left: 40% !important;
 }
+
+/* Signup Page CSS */
+#signupForm {
+    padding: 4% 5%;
+    margin-top: 1% !important;
+}
+
+#signupForm form input {
+    width: 125% !important;
+}
+
+#signupForm form button {
+    margin-left: 33% !important;
+    margin-top: 7% !important;
+}
