--- a/views/browse.handlebars
+++ b/views/browse.handlebars
@@ -1,13 +1,19 @@
 <div class="row align-center mb-5">
   <div class="col-md-6">
-    <h2>Welcome {{user.first_name}}</h2>
+    <h2>Welcome {{first_name}}</h2>
   </div>
   <div class="col-md-6">
     <h3>STRAINS</h3>
-    
-    {{!-- <h3><a href="mailto:{{user.email}}">{{user.email}}</a></h3> --}}
+   
+
+   <ul class="strainlist">
+    Here is the list of strains:
+{{{ strain }}}
+</ul>
+
+
+
   </div>
 </div>
-
 
 
