--- a/public/css/style.css
+++ b/public/css/style.css
@@ -142,3 +142,38 @@ button {
     max-width: 600px;
     padding: 20px 20px !important;
 }
+
+/* Styles for Landing Page */
+
+#home {
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    margin: 5% auto !important;
+}
+
+#description {
+    display: flex;
+    flex-direction: column;
+}
+
+#formSection {
+    padding: 4% 10%;
+    margin-top: 3% !important;
+}
+
+#formSection form button {
+    margin-left: 33% !important;
+    margin-top: 7% !important;
+    margin-bottom: 10% !important;
+}
+
+#newUser h3 {
+    margin-left: 20% !important;
+    margin-top: 5% !important;
+}
+
+#newUser button {
+    margin-left: 30% !important;
+    margin-top: 7% !important;
+}
