--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,16 +1,16 @@
-{{!-- <!doctype html>
+<!doctype html>
 <html lang="en">
 
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Home</title>
+    <title>Landing Page</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="/css/style.css">
 
 </head>
 
-<body>
+{{!-- <body>
 
     <div id="home">
         <div id="header">
@@ -54,7 +54,7 @@
 
 <div id="home">
         <div id="header">
-            <h3>goodweeds</h3>
+            <h3>goodWeeds</h3>
         </div>
 
         <div id="description">
