--- a/public/css/style.css
+++ b/public/css/style.css
@@ -180,41 +180,61 @@ button {
 }
 
 
-/* profile CSS */
+/* *profile CSS */
 
-/* style tab */
-.tab {
-  overflow: hidden;
-  background-color: rgb(13, 68, 31);
-}
-
-/* style buttons used to open tab content */
-.tab button {
-  background-color: inherit;
-  float: left;
-  border: none;
-  outline: none;
-  cursor: pointer;
-  padding: 14px 16px;
-  transition: 0.3s;
-  color: antiquewhite;
-}
-
-/* Change background color of buttons on hover */
-.tab button:hover {
-  background-color: crimson;
-}
-
-/* Change tab color when active */
-.tab button.active {
-  background-color: goldenrod;
-}
-
-/* Style myFavorite content tab content */
-.myFavoriteContent {
-  display: none;
-  padding: 6px 12px;
-  border: 1px solid #ccc;
-  border-top: none;
-
-}
+.profileBox {
+  border:solid 1px rgb(13, 68, 31);
+  margin: 1%;
+  padding: 2%;
+  border-radius: 6px;
+  height: 400px;
+  display: flexbox;
+  flex-wrap: wrap;
+  }
+  
+  /* style tab */
+  .tab {
+    overflow: hidden;
+    background-color: rgb(13, 68, 31);
+  }
+  
+  /* style buttons used to open tab content */
+  .tabButton {
+    background-color: inherit;
+    float: left;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    padding: 14px 16px;
+    transition: 0.3s;
+    color: antiquewhite;
+    border-radius: 5px;
+    padding-inline: 4%;
+  }
+  
+  /* Change background color of buttons on hover */
+  .tabButton:hover {
+    background-color: grey !important;
+  }
+  
+  /* Change tab color when active */
+  .tabButton.active {
+    background-color: #2d6a4f !important;
+  }
+  
+  /* Style myFavorite content tab content */
+  .tabcontent {
+    display: none;
+    padding: 6px 12px;
+    border: 1px solid #ccc;
+    border-top: none;
+  }
+  
+  .buttondiv {
+    display: block;
+    width: 800px;
+  }
+  
+  .tabready{
+    height: 500px;
+  }
