experimented with css for buttons and rearranged. got the profile buttons working for profile handlebars by using a hard coded script line.

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -55,14 +55,15 @@
 <body>
   <header class="display-flex justify-space-between align-center p-2">
     <h1>
-      GoodWeeds
+      goodWeeds
     </h1>
     <!-- Only display the logout button if the user is logged in -->
     <nav>
 
-      <button class="btn" id="logout">LOGOUT</button>
-            <button class="btn" id="Reviews">Reviews</button>
+      <button class="btn" id="Reviews">Reviews</button>
       <button class="btn" id="browseStrain">Browse Strains</button>
+      <button class="btn" id="logout">Logout</button>
+
 
     </nav>
   </header>
