--- a/views/myReviews.handlebars
+++ b/views/myReviews.handlebars
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Home</title>
+    <title>Profile</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -16,16 +16,10 @@
     <div class="profileBox">
 
       {{! tab buttons }}
-      <div class="buttondiv">
-        <button
-          class="tablinks tabButton"
-          onclick="clickHandle(event, 'favorites')"
-        >Favorites</button>
-        <button
-          class="tablinks tabButton"
-          onclick="clickHandle(event, 'reviews')"
-        >My Reviews</button>
-      </div>
+    <div class="buttondiv">
+      <button class="tablinks tabButton" onclick="clickHandle(event, 'favorites')">Favorites</button>
+      <button class="tablinks tabButton" onclick="clickHandle(event, 'reviews')">My Reviews</button>
+    </div>
 
       {{! tab content }}
       <div id="tabready">
@@ -44,8 +38,33 @@
 
     </div>
 
-    <script src="/public/js/profile.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"></script>
+  <script>
+    // onClick Tab 
+    function clickHandle(evt, tabTitle) {
+      let i, tabcontent, tablinks;
+
+    // clear previously clicked and displayed content
+      tabcontent = document.getElementsByClassName("tabcontent");
+      for (i = 0; i < tabcontent.length; i++) {
+        tabcontent[i].style.display = "none";
+        console.log('cleared data');
+      }
+
+    // Set the tab to "active"
+      tablinks = document.getElementsByClassName("tablinks");
+      for (i = 0; i < tablinks.length; i++) {
+        tablinks[i].className = tablinks[i].className.replace(" active", "");
+        console.log('active tab');
+      }
+
+      // Display the clicked tab and set it to active
+      document.getElementById(tabTitle).style.display = "block";
+      evt.currentTarget.className += " active";
+      console.log('display content');
+    }
+  </script>
+
+   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 
 </html>
