--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9,6 +9,7 @@
 
 button {
     background-color: rgb(13, 68, 31) !important;
+    color: antiquewhite !important;
 }
 
 .signupFormDiv {
@@ -204,6 +205,7 @@ button {
     float: left;
     border: none;
     outline: none;
+    border-color: antiquewhite;
     cursor: pointer;
     padding: 14px 16px;
     transition: 0.3s;
@@ -216,7 +218,7 @@ button {
   .tabButton:hover {
     background-color: grey !important;
   }
-  
+
   /* Change tab color when active */
   .tabButton.active {
     background-color: #2d6a4f !important;
