Adding CSS and changes to content to fill the white space

--- a/views/verifyAge.handlebars
+++ b/views/verifyAge.handlebars
@@ -14,13 +14,17 @@
         <form action="/verifyAge" method="post" class="boxBorder">
             <div class="mb-3 form-check">
                 <div id="headInfo">
-                    <h5>Slow down there, blaze! Are you at least 21 years old?</h5>
+                    <h1>Slow down there,</h1>
+                    <h1>To Blaze</h1>
+                    <br>
+                    <h1>We need to know..</h1>
+                    <h1>Are you at least <b>21</b> years old?</h1>
                 </div>
                 <div id="radioBtnDiv">
                     <div class="form-check form-check-inline">
                         <input class="form-check-input" type="radio" name="ageGroup" id="inlineRadio1"
                             value="true">
-                        <label class="form-check-label" for="inlineRadio1">Heck yeah, dude!</label>
+                        <label class="form-check-label" for="inlineRadio1"><b>Heck yeah, dude!</b></label>
                     </div>
                     <div class="form-check form-check-inline">
                         <input class="form-check-input" type="radio" name="ageGroup" id="inlineRadio2"
