trying to get reivews to post

--- a/views/allReviews.handlebars
+++ b/views/allReviews.handlebars
@@ -32,7 +32,7 @@
             <h5 id="head" class="wgBorder">WELCOME TO THE WEED FEED</h5>
 
             <div id="revSec">
-                <form action="/postReview" method="post">
+                <form action="/postReview" method="post" class="postReview">
                     <div id="postRev">
                         <div id="postRevHead" class="wgBorder">
                             <h5>Thoughts? Write'em here.</h5>
@@ -168,6 +168,8 @@
             </div>
         </div>
     </div>
+
+               <script src="/public/js/createReview.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
