--- a/views/allReviews.handlebars
+++ b/views/allReviews.handlebars
@@ -38,12 +38,13 @@
                             <h5>Thoughts? Write'em here.</h5>
                         </div>
 
+                        
                         <div id="postRevInp">
                           <button onclick="dropdown()" class="dropbtn">Which Strain Are You Reviewing?</button>
                           <div id="myDropdown" class="dropdown-content">
-                            <a href="#">strain</a>
-                            <a href="#">strain</a>
-                            <a href="#">strain</a>
+                            <a href="#">strain 1</a>
+                            <a href="#">strain 2</a>
+                            <a href="#">strain 3</a>
                           </div>
                             {{!-- <input type="text" name="title" id="postRevInpTitle" class="wgBorder"
                                 placeholder="Which strain are you reviewing?" required> --}}
@@ -176,6 +177,26 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"></script>
+    <script>
+      // user clicks button, toggles between hiding and showing dropdown content 
+function dropdown() {
+  document.getElementById('myDropdown').classList.toggle('show');
+}
+
+// close dropdown menu if user clicks outside of it 
+window.onclick = function(event) {
+  if (!event.target.matches('.dropbtn')) {
+    let dropdowns = document.getElementsByClassName('dropdown-content');
+    let i;
+    for (i = 0 i < dropdowns.length; i++) {
+      let (openDropdown.classList.contains('show')) {
+        openDropdown.classList.remove('show');
+      }
+    }
+  }
+}
+    </script>
+   
     <script src="/public/js/review.js">{{!}}</script>
 </body>
 
