--- a/views/allReviews.handlebars
+++ b/views/allReviews.handlebars
@@ -179,27 +179,9 @@
                <script src="/public/js/createReview.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"></script>
-    <script>
-      // user clicks button, toggles between hiding and showing dropdown content 
-function dropdown() {
-  document.getElementById('myDropdown').classList.toggle('show');
-}
+    
+    <script src="/js/review.js"></script>{{!}}
 
-// close dropdown menu if user clicks outside of it 
-window.onclick = function(event) {
-  if (!event.target.matches('.dropbtn')) {
-    let dropdowns = document.getElementsByClassName('dropdown-content');
-    let i;
-    for (i = 0 i < dropdowns.length; i++) {
-      let (openDropdown.classList.contains('show')) {
-        openDropdown.classList.remove('show');
-      }
-    }
-  }
-}
-    </script>
-   
-    <script src="/public/js/review.js">{{!}}</script>
 </body>
 
 </html>
