--- a/public/css/style.css
+++ b/public/css/style.css
@@ -189,6 +189,31 @@ h4 {
     max-width: 600px;
     padding: 20px 20px !important;
 
+    @media only screen and (max-width: 719px) {
+        #myRev {
+            margin-top: 2% !important;
+        }
+    }
+    
+    @media only screen and (max-width: 700px) {
+        .singleRev div {
+            flex-direction: column !important;
+        }
+    }
+    
+    @media only screen and (max-width: 384px) {
+        #topCate button {
+            width: 125px !important;
+        }
+    }
+    
+    @media only screen and (max-width: 290px) {
+        #myReviews {
+            margin-left: 0%;
+            margin-right: 0%;
+        }
+    }
+
 }
 
 /* Styles for Landing Page */
