created submitReview.html and added minimal CSS. Also created the submitReview.js.

--- a/views/allReviews.handlebars
+++ b/views/allReviews.handlebars
@@ -31,7 +31,7 @@
         <div id="allReviews">
             <h5 id="head" class="wgBorder">WELCOME TO THE WEED FEED</h5>
 
-            <div id="revSec">
+            {{!-- <div id="revSec">
                 <form action="/postReview" method="post" class="postReview">
                     <div id="postRev">
                         <div id="postRevHead" class="wgBorder">
@@ -71,7 +71,7 @@
                             </div>
                         </div>
                     </div>
-                </form>
+                </form> --}}
 
                 <div id="showAllRev">
                     {{#each reviews as |review| }}
