--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>goodWeeds</title>
-  <link rel="stylesheet" href="/css/jass.css">
+  {{!-- <link rel="stylesheet" href="/css/jass.css"> --}}
 </head>
 
 <body>
@@ -16,9 +16,9 @@
     <!-- Only display the logout button if the user is logged in -->
     <nav>
 
-      <button class="btn" id="Reviews"><a href="/reviews">Reviews</a></button>
-      <button class="btn" id="browseStrain"><a href="/strains">Browse Strains</a></button>
-      {{!-- <button class="btn" id="logout">Logout</button> --}}
+      <button class="btn" id="Reviews"><a href="/reviews" style="color:white">Reviews</a></button>
+      <button class="btn" id="browseStrain"><a href="/strains" style="color:white">Browse Strains</a></button>
+      <button class="btn" id="logout"><a href="/logout" style="color:white">Logout</a></button>
 
 
     </nav>
