last min change to the nav that I'm sorta liking

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <header class="display-flex justify-space-between align-center p-2">
+  <header class="display-flex justify-space-between align-center p-2 header">
     {{!-- <h1>
       goodWeeds
     </h1> --}}
