--- a/views/verifyAge.handlebars
+++ b/views/verifyAge.handlebars
@@ -15,7 +15,7 @@
             <div class="mb-3 form-check">
                 <div id="headInfo">
                     <h1>Slow down there,</h1>
-                    <h1>To Blaze</h1>
+                    <h1>Blaze</h1>
                     <br>
                     <h1>We need to know..</h1>
                     <h1>Are you at least <b>21</b> years old?</h1>
