--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -21,18 +21,20 @@
     <!-- Only display the logout button if the user is logged in -->
 
     <nav>
+      <div>
       <a href="#" class="navbar-brand">
       <!-- Logo Image -->
       <img src="https://live.staticflickr.com/65535/52386136164_6bbc2cbd57_c.jpg" width="500px" alt="" class="d-inline-block align-middle mr-2">
       <!-- Logo Text -->
       {{!-- <span class="text-uppercase font-weight-bold">Company</span> --}}
       </a>
+      </div>
 
-
+      <div class="mainBtn">
       <button class="btn" id="Reviews"><a href="/reviews" style="color:white">Reviews</a></button>
       <button class="btn" id="browseStrain"><a href="/strains" style="color:white">Browse Strains</a></button>
       <button class="btn" id="logout"><a href="/logout" style="color:white">Logout</a></button>
-
+      </div>
 
 
     </nav>
