--- a/views/allReviews.handlebars
+++ b/views/allReviews.handlebars
@@ -75,21 +75,26 @@
 
                 <div id="showAllRev">
                     {{#each reviews as |review| }}
-                    <div class="row align-center mb-5">
-                    <div class="col-md-6">
+                    <div class="row align-center mb-5 reviews">
+                    <div class="col-md-12">
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-md-12">
                     {{!-- todo add cards here --}}
-                    <h2>{{{review.title}}}</h2>
+                    <div class="topCard">
+                    <h2>Title: {{{review.title}}}</h2>
                     <h3>{{{review.rating}}}</h3>
                     <h3>{{{review.strain_id}}}</h3>
-                    <h3>{{{review.content}}}</h3>
-                    <h4>{{{review.timestamp}}}</h4>
-    
-  </div>
-</div>
-{{/each}}
-                    <div class="oneRev wgBorder">
+                    </div>
+                    <div class="bottomCard">
+                    <p>{{{review.content}}}</p>
+                    <p class="date">{{{review.timestamp}}}</p>
+                    </div>
+                    </div>
+                    </div>
+                    {{/each}}
+
+
+                    {{!-- <div class="oneRev wgBorder">
                         <div class="d-flex align-items-center">
                             <div class="flex-shrink-0">
                                 <img src="/images/pp.jpg" class="reviewImg" alt="reviewImg">
@@ -174,9 +179,9 @@
 
             </div>
         </div>
-    </div>
+    </div> --}}
 
-               <script src="/public/js/createReview.js"></script>
+               {{!-- <script src="/public/js/createReview.js"></script> --}}
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"></script>
     
