created navbar for submit reviews page, changed ids to try to get the js submission functionality.

--- a/views/allReviews.handlebars
+++ b/views/allReviews.handlebars
@@ -38,7 +38,7 @@
                     <div class="col-md-12">
                     {{!-- todo add cards here --}}
                     <div class="topCard">
-                    <h2>Title: {{{review.title}}}</h2>
+                    <h2>{{{review.title}}}</h2>
                     <h3>{{{review.rating}}}</h3>
                     <h3>{{{review.strain_id}}}</h3>
 
