--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -34,6 +34,7 @@
       <button class="btn" id="Reviews"><a href="/reviews" style="color:white">Reviews</a></button>
       <button class="btn" id="browseStrain"><a href="/strains" style="color:white">Browse Strains</a></button>
       <button class="btn" id="logout"><a href="/logout" style="color:white">Logout</a></button>
+      <button class="btn" id="submitReview"><a href="/views/submitReview.html" style="color: white">Submit Review</a></button>
       </div>
 
 
