redirecting to strains from signup and buttons

--- a/views/allReviews.handlebars
+++ b/views/allReviews.handlebars
@@ -81,7 +81,7 @@
                     <div class="col-md-6">
                     {{!-- todo add cards here --}}
                     <h2>{{{review.title}}}</h2>
-                    <h3>{{{review.rating}}}</h3>
+                    <h3>{{{review.rating}}} stars</h3>
                     <h3>{{{review.strain_id}}}</h3>
                     <h3>{{{review.content}}}</h3>
                     <h4>{{{review.timestamp}}}</h4>
