--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -58,8 +58,8 @@
         </div>
 
         <div id="description">
-            <span>is simply dummy text of the printing and typesetting industry.</span>
-            <span>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,</span>
+            <span>Your main hub for reviews and information on top strains.</span>
+            <span>Login or Sign Up here!</span>
         </div>
 
         <div id="formSection" class="boxBorder">
