--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Profile Page</title>
+    <title>goodWeeds</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="/css/style.css">
     {{!-- <link rel="stylesheet" href="/css/jass.css"> --}}
@@ -23,7 +23,7 @@
     <nav>
       <a href="#" class="navbar-brand">
       <!-- Logo Image -->
-      <img src="https://live.staticflickr.com/65535/52386136164_6bbc2cbd57_c.jpg" width="500px" alt="" class="d-inline-block align-middle mr-2">
+      <img src="https://live.staticflickr.com/65535/52386136164_6bbc2cbd57_c.jpg" width="500px" alt="" class="d-inline-block align-middle mr-2" href="/verifyAge">
       <!-- Logo Text -->
       {{!-- <span class="text-uppercase font-weight-bold">Company</span> --}}
       </a>
