--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -40,7 +40,7 @@
                         <input type="password" name="password" class="form-control" id="exampleInputPassword1" required>
                     </div>
 
-                    <button type="submit" class="btn btn-primary buttoBorder">Blaze On</button>
+                    <button type="submit" class="btn btn-primary buttoBorder" ><a href="/strains" style = "color:white">Blaze On</a></button>
                 </form>
             </div>
         </div>
