pushing for eric to pull

--- a/views/submitReview.html
+++ b/views/submitReview.html
@@ -94,7 +94,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="/public/js/submitReview.js"></script>
     <script src="/controllers/api/publicRoutes.js"></script>
-    <script src="/public/js/logout.js"></script>
+    <!-- <script src="/public/js/logout.js"></script> -->
     
   </body>
 
