--- a/views/allReviews.handlebars
+++ b/views/allReviews.handlebars
@@ -40,7 +40,7 @@
                     <div class="topCard">
                     <h2>{{{review.title}}}</h2>
                     <h3>{{{review.rating}}} stars</h3>
-                    <h3>{{{review.strain_id}}}</h3>
+                    {{!-- <h3>{{{review.strain_id}}}</h3> --}}
 
                     </div>
                     <div class="bottomCard">
@@ -51,92 +51,12 @@
                     </div>
                     {{/each}}
 
-                    <div class="oneRev wgBorder">
-                        <div class="d-flex align-items-center">
-                            <div class="flex-shrink-0">
-                                <img src="/images/pp.jpg" class="reviewImg" alt="reviewImg">
-                            </div>
-                            <div class="flex-grow-1 ms-3">
-                                <div class="reviewTitleDiv">
-                                    <h4 class="reviewTitle">STRAIN TITLE</h4>
-                                </div>
-                                <ul>
-                                    <li>
-                                        Effects blah blah blah blah blah blah blah blah
-                                    </li>
-                                    <li>
-                                        From blah blah blah blah blah blah
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="oneRev wgBorder">
-                        <div class="d-flex align-items-center">
-                            <div class="flex-shrink-0">
-                                <img src="/images/pp.jpg" class="reviewImg" alt="reviewImg">
-                            </div>
-                            <div class="flex-grow-1 ms-3">
-                                <div class="reviewTitleDiv">
-                                    <h4 class="reviewTitle">STRAIN TITLE</h4>
-                                </div>
-                                <ul>
-                                    <li>
-                                        Effects blah blah blah blah blah blah blah blah
-                                    </li>
-                                    <li>
-                                        From blah blah blah blah blah blah
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="oneRev wgBorder">
-                        <div class="d-flex align-items-center">
-                            <div class="flex-shrink-0">
-                                <img src="/images/pp.jpg" class="reviewImg" alt="reviewImg">
-                            </div>
-                            <div class="flex-grow-1 ms-3">
-                                <div class="reviewTitleDiv">
-                                    <h4 class="reviewTitle">STRAIN TITLE</h4>
-                                </div>
-                                <ul>
-                                    <li>
-                                        Effects blah blah blah blah blah blah blah blah
-                                    </li>
-                                    <li>
-                                        From blah blah blah blah blah blah
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="oneRev wgBorder">
-                        <div class="d-flex align-items-center">
-                            <div class="flex-shrink-0">
-                                <img src="/images/pp.jpg" class="reviewImg" alt="reviewImg">
-                            </div>
-                            <div class="flex-grow-1 ms-3">
-                                <div class="reviewTitleDiv">
-                                    <h4 class="reviewTitle">STRAIN TITLE</h4>
-                                </div>
-                                <ul>
-                                    <li>
-                                        Effects blah blah blah blah blah blah blah blah
-                                    </li>
-                                    <li>
-                                        From blah blah blah blah blah blah
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
+
 
                 </div>
 
             </div>
         </div>
-    </div> --}}
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"></script>
     
