--- a/views/allReviews.handlebars
+++ b/views/allReviews.handlebars
@@ -1,17 +1,3 @@
-<!doctype html>
-<html lang="en">
-
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Home</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="/css/style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" />
-</head>
-
-<body>
-
     <div id="allReviewSection" class="d-flex flex-column gap-3">
 
         {{!-- <div id="header">
@@ -30,6 +16,63 @@
 
         <div id="allReviews">
             <h5 id="head" class="wgBorder">WELCOME TO THE WEED FEED</h5>
+            <div id="allReviewSection" class="d-flex flex-column gap-3">
+
+            <div id="revSec">
+                
+                    <div id="postRev">
+                        <div id="postRevHead" class="wgBorder">
+                            <h5>Thoughts? Write 'em here.</h5>
+                        </div>
+
+              <form action="http://localhost:3001/postReview" method="post" class="postReview">
+                        
+<!-- Rev Title -->
+
+                          <div>
+                            <textarea name="title" id="title" placeholder="Review Title"></textarea>
+                          </div>
+
+<!-- Strain Title -->
+                          <div>
+                    
+                            <textarea type="text" name="strain_id" id="srain_title"
+                                placeholder="Which strain are you reviewing?" required></textarea>
+
+                          </div>
+
+<!-- Rev Buttons -->
+
+                    </div>
+
+                        <div class="buttonrow">
+                            <button type="button" id="rating" class="ratebutton" value="1">1</button>
+                            <button type="button" id="rating" class="ratebutton" value="2">2</button>
+                            <button type="button" id="rating" class="ratebutton" value="3">3</button>
+                            <button type="button" id="rating" class="ratebutton" value="4">4</button>
+                            <button type="button" id="rating" class="ratebutton" value="5">5</button>
+                        </div>
+
+<!-- Rev Text -->
+
+                        <div id="content">
+                            <textarea name="content" placeholder="Write your review here, my dude." required></textarea>
+                        </div>
+
+                        <div>
+
+<!-- Submit Button -->
+
+                            <div>
+                                <button type="submit">Submit</button>
+                            </div>
+                        </div>
+                  </div>
+              </form>
+    </div>
+
+   
+
                 <div id="showAllRev">
                     {{#each reviews as |review| }}
                     <div class="row align-center mb-5 reviews">
@@ -59,10 +102,4 @@
         </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"></script>
-    
-</body>
-
-</html>
-
-
-
+    <script src="/public/js/submitReview.js"></script>
