--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -33,8 +33,8 @@
   </footer>
 
   <!-- Only include the logout script if the user is logged in -->
-  {{!-- {{#if logged_in}} --}}
+  {{#if logged_in}}
   <script src="/js/logout.js"></script>
-  {{!-- {{/if}} --}}
+  {{/if}}
 </body>
 </html>
