--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -2,8 +2,8 @@
 
 <form class="form login-form">
   <div class="form-group">
-    <label for="user_name-login">email:</label>
-    <input class="form-input" type="text" id="user_name-login" />
+    <label for="username-login">email:</label>
+    <input class="form-input" type="text" id="username-login" />
   </div>
   <div class="form-group">
     <label for="password-login">password:</label>
@@ -14,4 +14,4 @@
   </div>
 </form>
 
-<script src="//public/js/login.js"></script>
+<script src="/js/login.js"></script>
