--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -14,4 +14,31 @@
   </div>
 </form>
 
+<h2>Signup</h2>
+    <form class="form signup-form">
+      <div class="form-group">
+        <label for="firstName-signup">First Name:</label>
+        <input class="form-input" type="text" id="firstName-signup" />
+      </div>
+      <div class="form-group">
+        <label for="lastName-signup">Last Name:</label>
+        <input class="form-input" type="text" id="lastName-signup" />
+      </div>
+      <div class="form-group">
+        <label for="username-signup">Username:</label>
+        <input class="form-input" type="text" id="username-signup" />
+      </div>
+      <div class="form-group">
+        <label for="email-signup">Email:</label>
+        <input class="form-input" type="text" id="email-signup" />
+      </div>
+      <div class="form-group">
+        <label for="password-signup">Password:</label>
+        <input class="form-input" type="password" id="password-signup" />
+      </div>
+      <div class="form-group">
+        <button class="btn btn-primary" type="submit">signup</button>
+      </div>
+    </form>
+
 <script src="/js/login.js"></script>
